<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">فروشگاه اکسسوری</string>

    <string name="login">ورود</string>
    <string name="signup">ثبت‌نام</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="login_or_signup">حساب ندارید؟ ثبتنام کنید</string>
    <string name="search">جستجو</string>

    <string name="home">خانه</string>
    <string name="profile">پروفایل</string>
    <string name="cart">سبد خرید</string>
    <string name="categories">دسته‌بندی‌ها</string>
    <string name="products">محصولات</string>
    <string name="product_details">جزئیات محصول</string>
    <string name="about_us">درباره ما</string>
    <string name="orders">سفارشات</string>
    <string name="signupDesc">لطفا تمامی اطلاعات را وارد کنید و آنها را به خاطر بسپارید</string>

    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="try_on">امتحان کنید</string>
    <string name="select_photo">انتخاب تصویر</string>
    <string name="change_size">تغییر اندازه</string>

    <string name="face_not_detected">صورت در تصویر تشخیص داده نشد</string>
    <string name="hand_not_detected">دست در تصویر تشخیص داده نشد</string>
    <string name="face_detection_error">خطا در تشخیص صورت</string>
    <string name="hand_detection_error">خطا در تشخیص دست</string>

    <string name="language">زبان</string>
    <string name="select_language">انتخاب زبان</string>
    <string name="system_language">زبان دستگاه</string>
    <string name="persian">فارسی</string>
    <string name="english">English</string>

    <string name="product_not_selected">محصولی برای تست انتخاب نشده است</string>
    <string name="network_error">خطا در ارتباط با سرور</string>
    <string name="unknown_error">خطای ناشناخته</string>
    <string name="admin_panel">پنل ادمین</string>
    <string name="back">برگشت</string>
    <string name="enter">وارد کردن</string>
    <string name="apply">اعمال</string>
    <string name="subtotal">هزینه محصولات</string>
    <string name="delivery">هزینه ارسال</string>
    <string name="tax">مالیات</string>
    <string name="_0">$0</string>
    <string name="final_total">جمع کل</string>
    <string name="procced_to_checkout">ادامه خرید</string>
    <string name="contact_us">تماس با ما</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="mobile">شماره تلفن</string>
    <string name="subject">موضوع</string>
    <string name="text">متن</string>
    <string name="send_message">ارسال</string>
    <string name="title">عنوان</string>
    <string name="size">اندازه</string>
    <string name="small">کوچک</string>
    <string name="medium">متوسط</string>
    <string name="large">یزرگ</string>
    <string name="qty">تعداد</string>
    <string name="description">توضیحات</string>
    <string name="choose_photo">انتخاب عکس</string>
    <string name="accessory_size">تغییر اندازه</string>
    <string name="see_all">دیدن همه</string>
    <string name="customer">کاربر عادی</string>
    <string name="admin">ادمین</string>
    <string name="price">قیمت</string>
    <string name="txtaboutus">به فروشگاه جواهرات ما خوش آمدید، جایی که ظرافت با مهارت هنری ترکیب می‌شود. هر قطعه با دقت و با استفاده از مواد باکیفیت و توجه دقیق به جزئیات طراحی شده و زیبایی جاودانه‌ای را خلق می‌کند. از انتخاب ما برای همراهی در لحظات گرانبهایتان متشکریم. </string>
    <string name="added_to_cart">به سبد خرید اضافه شد</string>
    <string name="login_success">ورود با موفقیت انجام شد</string>
    <string name="product_saved_to_database">Product saved to database!</string>
    <string name="uploading_photo">در حال آپلود تصویر...</string>
    <string name="cant_read_photo">نمی‌توان تصویر را خواند</string>
    <string name="upload_success">تصویر با موفقیت آپلود شد</string>
    <string name="your_message_has_send">پیام شما با موفقیت ارسال شد ممنونیم! ✨</string>
    <string name="signup_success">ثبت نام با موفقیت انجام شد</string>
    <string name="glamoure_accessory">Glamour Accessory</string>
    <string name="pose_not_detected">
    بدن یا شانه‌ها در تصویر تشخیص داده نشد
</string>

    <string name="pose_detection_error">
    خطا در تشخیص محل گردن
</string>
</resources>