<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbrown"
    tools:context=".Activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/BackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/back"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/back"
                        android:textColor="@color/white" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/FavBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/favorite_white"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/VideoMain"
                    android:layout_width="wrap_content"
                    android:layout_height="430dp"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffe_size"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="16dp"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/brown_2_full_corner"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SmallBtn"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.333"
                    android:text="@string/small"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/MediumBtn"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.333"
                    android:text="@string/medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/LargeBtn"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.333"
                    android:text="@string/large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="Qty"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/stroke_bg">

                    <TextView
                        android:id="@+id/MinusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/NumberCart"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/PlusBtn"
                        app:layout_constraintStart_toEndOf="@+id/MinusBtn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/PlusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/RatingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"/>

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/star"
                    app:tint="@color/brown" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"/>

            <TextView
                android:id="@+id/DescriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text"
                android:textColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/AddtochartBtn"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:text="@string/add_to_cart"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/AddtochartBtn"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>